OwnAudioEngineRust/ownaudio-ffi/include/ownaudio_ffi.h

/**
 * Opaque handle to a [`MultiTrackMixer`] instance.
 *
 * Create with `ownaudio_v1_mixer_create`; release with `ownaudio_v1_mixer_destroy`.
 */
typedef struct OwnAudioMixerHandle {
    uint8_t _private[0];
} OwnAudioMixerHandle;
/**
 * Opaque handle to a single audio [`Track`] inside a mixer.
 *
 * Create with `ownaudio_v1_track_create`; release with `ownaudio_v1_track_destroy`.
 */
typedef struct OwnAudioTrackHandle {
    uint8_t _private[0];
} OwnAudioTrackHandle;
/**
 * Opaque handle to the write side of a track's audio-feed ring buffer.
 *
 * Create with `ownaudio_v1_track_set_ring_source`; release with
 * `ownaudio_v1_track_source_destroy`.  The matching read side is owned by the
 * track on the audio thread, so the control thread pushes decoded samples
 * through this handle without ever touching the mixer.
 */
typedef struct OwnAudioTrackSourceHandle {
    uint8_t _private[0];
} OwnAudioTrackSourceHandle;
/**
 * Creates a lock-free ring buffer feeding the track and writes the write-side
 * handle to `*out_source`.
 *
 * - `mixer` — valid mixer handle that owns the track.
 * - `track` — valid track handle whose source is to be (re)installed.
 * - `capacity_samples` — fixed ring-buffer capacity in interleaved `f32`
 *   samples; sized for the desired buffering latency
 *   (`sample_rate * channels * latency_seconds`).  Clamped up to 1.
 * - `out_source` — receives the write-side handle on success.
 *
 * The reader is installed through the mixer's lock-free command queue, so it
 * becomes the track's source on the next render block; any previous source is
 * retired off the audio thread.  Samples written before the reader is installed
 * are buffered and played once it is — the ring buffer is live immediately.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.  Destroy the returned
 * handle with `ownaudio_v1_track_source_destroy`.
 */
int32_t ownaudio_v1_track_set_ring_source(struct OwnAudioMixerHandle *mixer,
                                          struct OwnAudioTrackHandle *track,
                                          size_t capacity_samples,
                                          struct OwnAudioTrackSourceHandle **out_source);
/**
 * Pushes up to `sample_count` interleaved `f32` samples into the track feed and
 * writes the number actually accepted to `*out_written`.
 *
 * Lock-free and non-blocking: when the ring buffer is full, fewer samples (or
 * zero) are written and the caller must retry later (back-pressure).  Use
 * [`ownaudio_v1_track_source_free_samples`] to size writes against the free
 * space.
 *
 * - `source` — valid handle from `ownaudio_v1_track_set_ring_source`.
 * - `samples` — pointer to the first of `sample_count` `f32` samples.
 * - `sample_count` — number of samples available at `samples`.
 * - `out_written` — receives the number of samples accepted.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_source_write(struct OwnAudioTrackSourceHandle *source,
                                       const float *samples,
                                       size_t sample_count,
                                       size_t *out_written);
/**
 * Writes the number of samples that can currently be written without overflow
 * to `*out_free`.
 *
 * - `source` — valid handle from `ownaudio_v1_track_set_ring_source`.
 * - `out_free` — receives the free-sample count.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_source_free_samples(struct OwnAudioTrackSourceHandle *source,
                                              size_t *out_free);
/**
 * Clears a track's audio source, silencing it.
 *
 * The current source (if any) is retired off the audio thread on the next
 * render block.  Any [`OwnAudioTrackSourceHandle`] previously returned for this
 * track keeps writing into a now-detached ring buffer until it is destroyed;
 * callers should destroy the stale source handle after clearing.
 *
 * - `mixer` — valid mixer handle that owns the track.
 * - `track` — valid track handle whose source is to be cleared.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_clear_source(struct OwnAudioMixerHandle *mixer,
                                       struct OwnAudioTrackHandle *track);
/**
 * Destroys a track-source write handle and releases its ring-buffer producer.
 *
 * Passing `null` is safe and has no effect.  Dropping the producer does not
 * disturb the track's reader on the audio thread; the track simply underruns
 * (renders silence) once the buffered samples are consumed.
 */
void ownaudio_v1_track_source_destroy(struct OwnAudioTrackSourceHandle *source);
/**
 * Creates a new [`MultiTrackMixer`] and writes its handle to `*out_mixer`.
 *
 * - `sample_rate` — output sample rate in Hz.
 * - `channels` — number of output channels (1 = mono, 2 = stereo).
 * - `out_mixer` — receives the new mixer handle on success.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_mixer_create(float sample_rate,
                                 uint16_t channels,
                                 struct OwnAudioMixerHandle **out_mixer);
/**
 * Destroys a mixer handle and releases all associated resources.
 *
 * Passing `null` is safe and has no effect.
 * All track and effect handles obtained from this mixer must be destroyed
 * before calling this function.
 */
void ownaudio_v1_mixer_destroy(struct OwnAudioMixerHandle *mixer);
/**
 * Starts every track in the mixer in a single call, against the shared clock.
 *
 * Sets all tracks to the playing state from the control thread in one
 * operation, so they begin on the same audio callback — a sample-accurate
 * start that avoids the per-track P/Invoke round-trips and the synchronisation
 * drift they would introduce.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_mixer_play_all(struct OwnAudioMixerHandle *mixer);
/**
 * Pauses every track in the mixer in a single call, against the shared clock.
 *
 * Sets all tracks to the paused state from the control thread in one
 * operation, so they pause on the same audio callback — avoiding the per-track
 * P/Invoke round-trips and the synchronisation drift they would introduce.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_mixer_pause_all(struct OwnAudioMixerHandle *mixer);
/**
 * Stops every track in the mixer in a single call, against the shared clock.
 *
 * Sets all tracks to the stopped state from the control thread in one
 * operation, so they stop on the same audio callback — avoiding the per-track
 * P/Invoke round-trips and the synchronisation drift they would introduce.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_mixer_stop_all(struct OwnAudioMixerHandle *mixer);
/**
 * Adds a new track to the mixer and writes its handle to `*out_track`.
 *
 * - `mixer` — valid mixer handle.
 * - `out_track` — receives the new track handle on success.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_create(struct OwnAudioMixerHandle *mixer,
                                 struct OwnAudioTrackHandle **out_track);
/**
 * Destroys a track handle.  Does NOT remove the track from the mixer.
 *
 * Call `ownaudio_v1_track_remove` first to remove the track from the mix,
 * then this function to release the handle memory.
 * Passing `null` is safe and has no effect.
 */
void ownaudio_v1_track_destroy(struct OwnAudioTrackHandle *track);
/**
 * Removes and destroys the track from the mixer.
 *
 * The track handle is invalidated after this call; do not use it afterwards.
 * Passing `null` is safe and has no effect.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_remove(struct OwnAudioMixerHandle *mixer,
                                 struct OwnAudioTrackHandle *track);
/**
 * Starts or resumes playback of the track.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_play(struct OwnAudioTrackHandle *track);
/**
 * Pauses the track without resetting its position.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_pause(struct OwnAudioTrackHandle *track);
/**
 * Stops the track and resets its position to zero.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_stop(struct OwnAudioTrackHandle *track);
/**
 * Sets the track's playback position to `sample_position`.
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_seek(struct OwnAudioTrackHandle *track, uint64_t _sample_position);
/**
 * Sets the track gain (linear amplitude multiplier; 1.0 = unity).
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_set_gain(struct OwnAudioTrackHandle *track, float gain);
/**
 * Sets the track tempo ratio (1.0 = normal speed, 2.0 = double speed).
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_set_tempo(struct OwnAudioTrackHandle *track, float ratio);
/**
 * Sets the track pitch shift in semitones (-24 … +24).
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_set_pitch(struct OwnAudioTrackHandle *track, float semitones);
/**
 * Sets the track mute state (0.0 = unmuted, 1.0 = muted).
 *
 * Returns `OwnAudioErrorCode::Success` (0) on success.
 */
int32_t ownaudio_v1_track_set_mute(struct OwnAudioTrackHandle *track, float muted);